--- a/src/home/templates/home/index.html
+++ b/src/home/templates/home/index.html
@@ -9,4 +9,8 @@
     <p>
         This is the home page.
     </p>
+
+    <p>
+        <a href="{% url 'account_logout' %}">Logout</a>
+    </p>
 {% endblock body %}
