--- a/src/home/templates/home/index.html
+++ b/src/home/templates/home/index.html
@@ -4,7 +4,7 @@
     Home
 {% endblock title %}
 
-{% block body %}
+{% block content %}
     <h1>Home</h1>
     <p>
         This is the home page.
@@ -13,4 +13,4 @@
     <p>
         <a href="{% url 'account_logout' %}">Logout</a>
     </p>
-{% endblock body %}
+{% endblock content %}
