--- a/src/home/templates/home/index.html
+++ b/src/home/templates/home/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}
+{% block head_title %}
     Home
-{% endblock title %}
+{% endblock head_title %}
 
 {% block content %}
     <h1>Home</h1>
