--- a/src/home/templates/navbar.html
+++ b/src/home/templates/navbar.html
@@ -10,7 +10,9 @@
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">{% trans 'Menu' %}</h5>
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+                    {{ user.first_name|title }} {{ user.last_name|title }}
+                </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -18,7 +20,7 @@
                     <li class="nav-item">
                         <form action="{% url 'account_logout' %}" method="post">
                             {% csrf_token %}
-                            <button class="btn btn-outline-dark" type="submit">{% trans 'Logout' %}</button>
+                            <button class="btn btn-outline-danger" type="submit">{% trans 'Logout' %}</button>
                         </form>
                     </li>
                 </ul>
