Update user profile picture in navbar

--- a/src/home/templates/navbar.html
+++ b/src/home/templates/navbar.html
@@ -11,7 +11,8 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                    {{ user.first_name|title }} {{ user.last_name|title }}
+                    <img src="{{ user.socialaccount_set.first.extra_data.picture }}" alt="Logo" width="30" height="30" class="d-inline-block rounded-circle">
+                    <span class="ms-1 align-middle">{{ user.first_name|title }} {{ user.last_name|title }}</span>
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
