--- a/src/home/templates/navbar.html
+++ b/src/home/templates/navbar.html
@@ -23,6 +23,9 @@
                         <a class="nav-link" href="{% url 'home-profile' %}">{% trans 'Profile' %}</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'finance-index' %}">{% trans 'Finance' %}</a>
+                    </li>
+                    <li class="nav-item">
                         <form action="{% url 'account_logout' %}" method="post">
                             {% csrf_token %}
                             <button class="btn btn-outline-danger" type="submit">{% trans 'Logout' %}</button>
