--- a/src/finance/templates/finance/index.html
+++ b/src/finance/templates/finance/index.html
@@ -5,12 +5,21 @@
 {% block head_title %}{% trans 'Finance' %}{% endblock %}
 
 {% block content %}
-<h1>Accounts</h1>
+<div class="row">
+    <div class="col">
+        <h1>{% trans 'Accounts' %}</h1>
+    </div>
+    <div class="col">
+        <div class="d-flex justify-content-end">
+            <a href="#" class="btn btn-primary">+</a>
+        </div>
+    </div>
+</div>
 <table class="table">
     <thead>
         <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Balance</th>
+            <th scope="col">{% trans 'Name' %}</th>
+            <th scope="col">{% trans 'Balance' %}</th>
         </tr>
     </thead>
     <tbody>
