Remove finance app from INSTALLED_APPS and URLs

--- a/src/home/templates/navbar.html
+++ b/src/home/templates/navbar.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="{% url 'home-profile' %}">{% trans 'Profile' %}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'finance-index' %}">{% trans 'Finance' %}</a>
+                        <a class="nav-link" href="#">{% trans 'Finance' %}</a>
                     </li>
                     <li class="nav-item">
                         <form action="{% url 'account_logout' %}" method="post">
