Add Heroku metadata to context

--- a/src/home/templates/navbar.html
+++ b/src/home/templates/navbar.html
@@ -25,12 +25,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">{% trans 'Finance' %}</a>
                     </li>
-                    <li class="nav-item">
+
+                    <div class="d-flex justify-content-center my-2">
                         <form action="{% url 'account_logout' %}" method="post">
                             {% csrf_token %}
-                            <button class="btn btn-outline-danger" type="submit">{% trans 'Logout' %}</button>
+                            <button class="btn btn-outline-danger mx-auto" type="submit">{% trans 'Logout' %}</button>
                         </form>
-                    </li>
+                    </div>
+                    <div class="d-flex justify-content-center my-2">
+                        <span class="small text-center">{{ slug_description }} - {{ release_created_at }}</span>
+                    </div>
+
                 </ul>
             </div>
         </div>
