--- a/src/home/templates/home/index.html
+++ b/src/home/templates/home/index.html
@@ -9,4 +9,14 @@
     <p>
         This is the home page.
     </p>
+    <div>
+        <h2>Send a message</h2>
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <button class="btn btn-success" type="submit" value="Submit">
+                <i class="bi bi-envelope"></i> Send
+            </button>
+        </form>
+    </div>
 {% endblock content %}
